# ac215_Group_127_2473879

./: .gitignore  Dockerfile  ELECTRON_BUILD_SETUP.md  README.md  delete-all-artifacts.sh  forge.config.js  requirements.txt
eda/: README.md  (+11 more)
src/data-processor/: Dockerfile  Dockerfile.ci  README.md  data-processor.sh  docker-shell.sh  harmonize_labels.py  harmonize_labels_filter_desc.py  processor.py  processor_ddi.py  processor_derm1m.py  processor_fitz.py  processor_isic.py  processor_scin.py  processor_skincap.py  pyproject.toml  pytest.ini  verify_output.py
src/data-processor/tests/unit/: test_preprocessor.py
src/deployment/: .dockerignore  Dockerfile  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  create_network.py  docker-build.sh  docker-entrypoint.sh  docker-shell.sh  pyproject.toml  testload.py
src/deployment/modules/: gke_cluster.py  gke_inference.py  inference.py  modal_llm.py
src/inference-cloud/: .gitignore  Dockerfile  Dockerfile.ci  README.md  conftest.py  docker-entrypoint.sh  docker-shell.sh  inference_classifier.py  main.py  pyproject.toml  run-tests.sh
src/inference-cloud/tests/: test_integration.py  test_system.py  test_unit.py
src/llm/: .dockerignore  Dockerfile  Dockerfile.ci  README.md  demographics.json  deploy.sh  docker-shell.sh  llm.py  llm_modal.py  prompts.py  pyproject.toml  pytest.ini  requirements-test.txt  run_integration_tests.sh  run_system_tests.sh  run_unit_tests.sh  simulate_example.ipynb  test_streaming_api.ipynb
src/llm/case_test_streaming/: conversation_history.json
src/llm/test_case_simulate/: case_history.json  conversation_history.json
src/llm/tests/: README.md  conftest.py  integration.py  mock_data.py  system.py  test_llm.py  test_llm_modal_integration.py  unit.py
src/ml_workflow/: .gitignore  README.md  __init__.py  constants.py  eval.py  io_utils.py  main.py  modal_evaluation_volume.py  modal_training.py  modal_training_gcs.py  modal_training_volume.py  pyproject.toml  requirements.txt  rough.ipynb  test_dataloader.py  text_embeddings.ipynb  utils.py
src/ml_workflow/configs/: TEMPLATE.yaml  config.yaml  exp10.yaml  exp11.yaml  exp12.yaml  exp5.yaml  exp6.yaml  exp7.yaml  exp8.yaml  exp9.yaml  modal_simple.yaml  modal_template.yaml  test_config.yaml
src/ml_workflow/configs/archive/: exp0.yaml  exp1.yaml  exp10.yaml  exp11.yaml  exp12.yaml  exp13.yaml  exp14.yaml  exp2.yaml  exp3.yaml  exp4.yaml  exp8.yaml  exp9.yaml  exp_arch_001_resnet50_dv2.yaml  exp_arch_002_efficientnet_b0.yaml  exp_arch_003_densenet121.yaml  exp_arch_004_efficientnet_b1.yaml  exp_arch_005_vit_b16.yaml  exp_arch_006_efficientnet_b0_sapbert512_cls.yaml  exp_arch_008_efficientnet_b0_pubmedbert256.yaml  exp_arch_009_efficientnet_b0_sapbert256_dv2.yaml  exp_arch_010_efficientnet_b0_sapbert256_mask_image_dv2.yaml  exp_arch_011_efficientnet_b0_sapbert256_mask_text_dv2.yaml  exp_arch_015_efficientnet_b0_sapbert256_text_mask_and_auxiliary_loss.yaml  exp_arch_016_efficientnet_b0_sapbert256_text_mask_no_proj_dropout.yaml  exp_arch_017_efficientnet_b0_sapbert256_reduced_image_bottleneck.yaml  exp_data_even_more_augmentation.yaml  exp_data_increased_augmentation.yaml  exp_data_no_verified_sources.yaml  exp_data_noderm1m.yaml  exp_data_only_verified_sources.yaml
src/ml_workflow/configs/experiments/: exp_001_baseline.yaml  exp_002_efficientnet_b0.yaml  exp_003_densenet121.yaml  exp_004_vit_b16.yaml  exp_arch_001_baseline.yaml  exp_arch_001_resnet50.yaml  exp_arch_002_efficientnet_b0.yaml  exp_arch_003_densenet121.yaml  exp_arch_004_efficientnet_b1.yaml  exp_arch_004_vit_b16.yaml  exp_arch_005_efficientnet_b0_pubmed128.yaml  exp_arch_005_vit_b16.yaml  exp_arch_006_efficientnet_b0_pubmed256.yaml  exp_arch_006_efficientnet_b0_sapbert512_cls.yaml  exp_arch_007_efficientnet_b0_sapbert512.yaml  exp_arch_007_efficientnet_b0_sapbert512_mean.yaml  exp_arch_008_efficientnet_b0_pubmedbert256.yaml  exp_arch_008_efficientnet_b0_sapbert_cls.yaml  exp_arch_009_efficientnet_b0_sapbert256.yaml  exp_arch_010_efficientnet_b0_sapbert256_focal.yaml  exp_arch_010_efficientnet_b0_sapbert256_mask_image.yaml  exp_arch_011_efficientnet_b0_sapbert256_mask_text.yaml  exp_arch_011_efficientnet_b0_sapbert256_weighted_sum.yaml  exp_arch_012_efficientnet_b0_sapbert256_mask_random25.yaml  exp_arch_012_efficientnet_b0_sapbert256_max_performance.yaml  exp_arch_013_efficientnet_b0_sapbert256_max_performance_384.yaml  exp_arch_013_efficientnet_b0_sapbert256_unfreeze_all_changed_concat.yaml  exp_arch_dv2_01_vision_resnet50.yaml  (+59 more)
src/ml_workflow/dataloader/: __init__.py  dataloader.ipynb  dataloader.py  embedding_utils.py  transform_utils.py
src/ml_workflow/inference/: inference_classifier.py  test.py  vision_encoder.py
src/ml_workflow/llm/: deploy.sh  llm.py  llm_modal.py  prompts.py
src/ml_workflow/logs/: training_logs_16_Oct.csv  wandb_export_2025-11-25T20_45_23.955-05_00.csv  wandb_export_2025-11-25T20_46_12.064-05_00.csv  wandb_export_2025-11-25T20_46_19.890-05_00.csv  wandb_export_2025-11-25T20_46_42.043-05_00.csv  wandb_export_2025-11-25T20_46_48.205-05_00.csv  wandb_export_2025-11-25T20_46_53.526-05_00.csv  wandb_export_2025-11-25T20_47_23.572-05_00.csv  wandb_export_2025-11-25T20_47_30.168-05_00.csv
src/ml_workflow/model/: imagenet.py  utils.py
src/ml_workflow/notebooks/: compare_vision_models.ipynb
src/ml_workflow/train/: train.py  train_utils.py
(+139 files in other folders)
