[project]
name = "data-processor"
version = "0.1.0"
description = "Process raw data into finalized format for training models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=3.4.1",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
]
