[project]
name = "pibu-ai-deployment"
version = "0.1.0"
description = "Pulumi deployment for pibu.ai infrastructure"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-gcp>=7.0.0,<8.0.0",
    "pulumi-docker>=4.0.0,<5.0.0",
    "pulumi-kubernetes>=4.0.0,<5.0.0",
    "pulumi-command>=0.9.0,<1.0.0",
    "modal>=0.65.0",
    "fastapi>=0.100.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = []
