[project]
name = "inference-cloud"
version = "0.1.0"
description = "FastAPI inference service for skin disease classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ml_workflow",  # Local package for shared ML code
    "fastapi>=0.121.3",
    "gcsfs>=2025.10.0",
    "google-cloud-storage>=3.6.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0,<2.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.2",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
ml_workflow = { path = "../ml_workflow", editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
