[project]
name = "llm"
version = "0.1.0"
description = "LLM-powered dermatology assistant using MedGemma"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0; sys_platform == 'linux'",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]
