[project]
name = "llm"
version = "0.1.0"
description = "LLM-powered dermatology assistant using MedGemma"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.30.0",
    "pytest>=7.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pytest-cov>=4.1.0",
]

# CPU-only torch for CI environments
cpu = [
    "torch>=2.0.0; python_version < '4.0'",
]
